--- a/src/analyzing/Dockerfile
+++ b/src/analyzing/Dockerfile
@@ -13,19 +13,22 @@ RUN apt-get update \
 RUN apt-get update \
     && apt-get install -y build-essential python3-dev git \
     libfftw3-dev libavcodec-dev libavformat-dev libavresample-dev \
-    libsamplerate0-dev libtag1-dev libyaml-dev \
+    libsamplerate0-dev libtag1-dev libyaml-dev libchromaprint-dev \
     && mkdir /essentia && cd /essentia && git clone https://github.com/MTG/essentia.git \
-    && cd /essentia/essentia && git checkout v2.1_beta5 && python3 waf configure --with-python --with-examples --with-vamp \
+    && cd /essentia/essentia && git checkout v2.1_beta5 && python3 waf configure --with-python --with-examples --with-vamp --no-msse \
     && python3 waf && python3 waf install && ldconfig \
     &&  apt-get remove -y build-essential libyaml-dev libfftw3-dev libavcodec-dev \
         libavformat-dev libavutil-dev libavresample-dev python-dev libsamplerate0-dev \
-        libtag1-dev \
+        libtag1-dev libchromaprint-dev \
     && apt-get autoremove -y \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/* \
     && cd / && rm -rf /essentia/essentia
 
-RUN pip install soundcard
+RUN apt-get update \ 
+    && apt-get install -y python3-pip
+
+RUN python3 -m pip install soundcard
 
 ENV PYTHONPATH /usr/local/lib/python3/dist-packages
 
