--- a/src/animation/Dockerfile
+++ b/src/animation/Dockerfile
@@ -1,11 +1,10 @@
-FROM alpine:latest
+FROM ubuntu:21.04
 
 ENV LANG C.UTF-8
 
 RUN apt-get update \
-    && apt-get -y upgrade
-
-RUN apt-get install python3-dev python3-pip
+    && apt-get -y upgrade \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y python3-numpy python3-pip
 
 RUN pip install numpy colormath pandas
 
