--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -33,6 +33,9 @@ services:
     links:
       - "redis"
 
+    tty: true
+    stdin_open: true
+
     # command: python3 analyzer.py
 
     networks:
@@ -49,6 +52,10 @@ services:
 
     links:
       - "redis"
+
+    tty: true
+    stdin_open: true
+
 
     # command: python3 animationmanager.py
 
