Change analyzer trigger

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -33,10 +33,7 @@ services:
     links:
       - "redis"
 
-    tty: true
-    stdin_open: true
-
-    # command: python3 analyzer.py
+    command: python3 analyzer.py
 
     networks:
       node_net:
@@ -56,8 +53,7 @@ services:
     tty: true
     stdin_open: true
 
-
-    # command: python3 animator.py
+    command: python3 animator.py
 
     networks:
       node_net:
