Comment out animating script

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     tty: true
     stdin_open: true
 
-    command: python3 animator.py
+    # command: python3 animator.py
 
     networks:
       node_net:
